--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
     "antd": "^3.26.0",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
+    "babel-standalone": "^6.26.0",
     "dva": "^2.4.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "font-awesome": "^4.7.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
