--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.1.0",
     "husky": "^0.12.0",
     "redbox-react": "^1.4.3",
-    "roadhog": "^2.5.0-beta.4"
+    "roadhog": "^2.5.0-beta.4",
+    "webpack-cli": "^3.3.10"
   }
 }
